[gd_scene load_steps=8 format=3 uid="uid://cp02g0y316hsw"]

[ext_resource type="Theme" uid="uid://bdla7c4dxxok8" path="res://game_themes.tres" id="1_ia1n6"]
[ext_resource type="Script" path="res://scripts/title.gd" id="2_hiwto"]
[ext_resource type="Texture2D" uid="uid://b50oqxle6a0we" path="res://assets/themes/game_theme_bg.png" id="3_w65of"]
[ext_resource type="Texture2D" uid="uid://dvuavt2ufsq3a" path="res://assets/themes/TopPatternPanel_02_33x15.png" id="4_ygloa"]
[ext_resource type="Texture2D" uid="uid://4omavltjklky" path="res://assets/themes/BottomPatternPanel_119x17.png" id="5_6civk"]
[ext_resource type="Texture2D" uid="uid://b6mfmpjv4fa3g" path="res://assets/themes/CornerKnot_14x14.png" id="6_7af2g"]
[ext_resource type="AudioStream" uid="uid://b2uo7hfs7kq" path="res://assets/sfx/Fantasy_UI (21).wav" id="7_81wt4"]

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ia1n6")
script = ExtResource("2_hiwto")

[node name="TextureRect" type="TextureRect" parent="."]
top_level = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_w65of")

[node name="Panel2" type="Panel" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -500.0
offset_right = 400.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ia1n6")

[node name="TopPattern" type="TextureRect" parent="TextureRect/Panel2"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 90.0
offset_top = 90.0
offset_right = -90.0
offset_bottom = 148.0
grow_horizontal = 2
texture = ExtResource("4_ygloa")

[node name="Label" type="Label" parent="TextureRect/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 96.0
offset_top = 160.0
offset_right = -104.0
offset_bottom = -540.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Title"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="StartButton" type="Button" parent="TextureRect/Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.5
offset_top = 63.0
offset_right = 119.5
offset_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
text = "Start"

[node name="BottomPattern" type="TextureRect" parent="TextureRect/Panel2"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 75.0
offset_top = -190.0
offset_right = -85.0
offset_bottom = -110.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("5_6civk")

[node name="corner1" type="TextureRect" parent="TextureRect/Panel2"]
layout_mode = 1
offset_left = -30.0
offset_top = -20.0
offset_right = 60.0
offset_bottom = 70.0
texture = ExtResource("6_7af2g")

[node name="corner2" type="TextureRect" parent="TextureRect/Panel2"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_top = -20.0
offset_right = 30.0
offset_bottom = 70.0
grow_horizontal = 0
texture = ExtResource("6_7af2g")

[node name="corner3" type="TextureRect" parent="TextureRect/Panel2"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -70.0
offset_right = 60.0
offset_bottom = 20.0
grow_vertical = 0
texture = ExtResource("6_7af2g")

[node name="corner4" type="TextureRect" parent="TextureRect/Panel2"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -70.0
offset_right = 30.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("6_7af2g")

[node name="ButtonClicked" type="AudioStreamPlayer" parent="TextureRect"]
stream = ExtResource("7_81wt4")
bus = &"SFX"
